--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ design is how it works. </p>
                 </div>
 
                 <div class="col-md-4 wow fadeInRight" data-wow-delay="1.5s">
-                    <form id="contact_form" class="md-form">
+                    <form id="contact_form" class="md-form" action="post">
                         <div id="contact_results"></div>
                         <div id="contact_body">
                             <label for="name">Name</label>
@@ -329,6 +329,7 @@ design is how it works. </p>
                             <input type="email" name="email" id="email" required="true" class="input-field"/>
                             <label for="message">Message</label>
                             <textarea name="message" id="message" class="textarea-field" required="true"></textarea>
+
                             <div class="g-recaptcha" data-sitekey="6Lda2gcTAAAAAHW6GlGzuzlZbsZofRxBOr2ESSgi"></div>
                             <div class="submit-wrap">
                                 <input class="submit hvr-sweep-to-right" type="submit" value="Submit" id="submit_btn" />
