--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ design is how it works. </p>
                                 <input class="submit hvr-sweep-to-right" type="submit" value="Submit" id="submit_btn" />
                             </div>
 
-                            <div class="g-recaptcha" data-sitekey="6Lda2gcTAAAAAHW6GlGzuzlZbsZofRxBOr2ESSgi"></div>
+                         <!--   <div class="g-recaptcha" data-sitekey="6Lda2gcTAAAAAHW6GlGzuzlZbsZofRxBOr2ESSgi"></div> -->
                         </div>
                     </form>
 
