--- a/index.html
+++ b/index.html
@@ -86,9 +86,11 @@
         <div class="container">
             <h1 class="wow fadeInUp" data-wow-delay="1s">About</h1>
             <div class="content wow fadeInUp" data-wow-delay="1.5s">
-                <p>I'm a passionate webdesigner from Nepal who believe design is not just what it looks like and feels like but
-design is how it works. </p>
-                <p>I'm a professional webdesigner working in this field since 2007. </p>
+                <p>I'm a Kathmandu, Nepal based passionate webdesigner who believe design is not just what it looks like and feels like but
+design is how it works.  </p>
+                <p>I'm a professional webdesigner working in this field since 2007. I like minimal design with lots of whitespace. I have good knowledge of HTML5, CSS3 and Jquery. I ocassionally blog at <a href="http://blog.magardinesh.com.np">blog.magardinesh.com.np</a> about latest design trends and design inspiration.</p>
+                <p>I am available for freelance work.</p>
+                <div class="wow fadeInUp md-btn" data-md-btn="Hire Me" data-wow-delay="2s"><a href="#contact"><span>Hire Me</span></a></div>
             </div>
         </div>
     </section>
@@ -96,7 +98,6 @@ design is how it works. </p>
     <section id="skill">
         <div class="container">
             <h1 class="wow fadeInUp" data-wow-delay="1s">Skills</h1>
-
             <div class="skill wow fadeInUp" data-wow-delay="1.5s">
                 <div class="skillbar clearfix " data-percent="95%">
                     <div class="skillbar-title" style="background: #d35400;"><span>HTML5</span></div>
