css light update

--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>MagarDinesh.com.np | Web designer from Nepal</title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="I am Dinesh Thapa Magar, Kathmandu, Nepal based passionate webdesigner who believe design is not just what it looks like and feels like but
+design is how it works">
+    <meta name="keywords" content="Dinesh Thapa Magar, Dinesh, Web Designer from Nepal, Web Designer Nepal, Nepal Web Designer, Freelance Web Designer from Nepal, PSD to HTML, XHTML5, CSS3, Web Design, Frontend Developer Nepal, Web design nepal, web designer, SEO Nepal ">
     <meta name="author" content="Dinesh Thapa Magar">
-    <meta name="google-site-verification" content="#">
+    <meta name="google-site-verification" content="VNh9Z41d7w9d8UzpIlXt-cuhKcGCZOEd6Zm5t9MyUpM">
     <meta name="msvalidate.01" content="#">
+    <meta name="Classification" content="internet">
+    <meta name="robots" content="All, Index, Follow">
+    <meta name="revisit-after" content="1 Days">
+    <meta http-equiv="content-language" content="en">
+    <meta name="Distribution" content="Global">
+    <meta name="Rating" content="General">
+    <meta name="googlebot" content="index, follow">
+
     <link rel="publisher" href="#">
     <link rel="author" href="http://magardinesh.com.np">
     <link rel="apple-touch-icon" sizes="57x57" href="favicons/apple-touch-icon-57x57.png">
@@ -45,6 +54,8 @@
     <![endif]-->
   </head>
   <body>
+
+    <a href="http://www.csslight.com/website/12139/Dinesh-Thapa-Magar-Web-Designer" title="CSS Light" style="width:84px;height:29px;position:fixed;top:100px;left:0px;z-index:99999;text-indent:-9999px;background: url(http://www.csslight.com/ribbons/small-csslight-ribbon-left.png) no-repeat;" target="_blank">CSS Light Web Gallery</a>
 
   <a id="totop" href="#"><i class="fa fa-angle-up"></i></a>
 
@@ -373,8 +384,19 @@ design is how it works.  </p>
     <script src="js/wow.min.js"></script>
     <script src="js/jquery.quick.pagination.min.js"></script>
     <script src="js/main.js"></script>
-  <script>
+  <script type="text/javascript">
 
-  </script>
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-24365196-1']);
+  _gaq.push(['_setDomainName', '.magardinesh.com.np']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
   </body>
 </html>
