--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@ design is how it works">
   </head>
   <body>
 
-    <a href="http://www.csslight.com/website/12139/Dinesh-Thapa-Magar-Web-Designer" title="CSS Light" style="width:84px;height:29px;position:fixed;top:100px;left:0px;z-index:99999;text-indent:-9999px;background: url(http://www.csslight.com/ribbons/small-csslight-ribbon-left.png) no-repeat;" target="_blank">CSS Light Web Gallery</a>
+    <a href="http://www.csswinner.com/details/magardineshcomnp/9357" title="MagarDinesh.com.np csswinner nominee" style="height:100px;width:70px;position:fixed;top:50px;left:0px;z-index:99999;text-indent:-9999px;background: url(images/nominee-new-white-black-left.svg) no-repeat;" target="_blank">MagarDinesh.com.np csswinner nominee</a>
+
+    <a href="http://www.csslight.com/website/12139/Dinesh-Thapa-Magar-Web-Designer" title="CSS Light" style="width:84px;height:29px;position:fixed;top:170px;left:0px;z-index:99999;text-indent:-9999px;background: url(http://www.csslight.com/ribbons/small-csslight-ribbon-left.png) no-repeat;" target="_blank">CSS Light Web Gallery</a>
 
   <a id="totop" href="#"><i class="fa fa-angle-up"></i></a>
 
