--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ design is how it works">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
 
-    <script src='https://www.google.com/recaptcha/api.js'></script>
+    <!--<script src='https://www.google.com/recaptcha/api.js'></script>-->
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="js/shiv/html5shiv.min.js"></script>
@@ -54,6 +54,9 @@ design is how it works">
     <![endif]-->
   </head>
   <body>
+
+    <a href="http://cssreel.com/Website/magardinesh-com-np" title="MagarDinesh.com.np cssreel nominee" style="height:100px;width:140px;position:fixed;top:50px;right:0px;z-index:99999;" target="_blank"><img src="images/nominee2.png" alt="MagarDinesh.com.np cssreel nominee"></a>
+
 
     <a href="http://www.csswinner.com/details/magardineshcomnp/9357" title="MagarDinesh.com.np csswinner nominee" style="height:100px;width:70px;position:fixed;top:50px;left:0px;z-index:99999;text-indent:-9999px;background: url(images/nominee-new-white-black-left.svg) no-repeat;" target="_blank">MagarDinesh.com.np csswinner nominee</a>
 
